--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --env=jsdom --verbose"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.0",
     "@types/react-modal": "^3.12.1",
     "axios": "^0.21.1",
+    "msw": "^0.34.0",
     "next": "11.0.1",
+    "next-page-tester": "^0.28.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-image-crop": "^8.6.12",
@@ -23,13 +26,30 @@
     "universal-cookie": "^4.0.4"
   },
   "devDependencies": {
+    "@testing-library/dom": "^8.1.0",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
+    "@testing-library/user-event": "^13.2.1",
+    "@types/jest": "^27.0.1",
     "@types/node": "^16.3.1",
     "@types/react": "^17.0.14",
     "@types/react-redux": "^7.1.18",
     "@types/styled-components": "^5.1.11",
+    "babel-jest": "^27.0.6",
     "eslint": "7.30.0",
     "eslint-config-next": "11.0.1",
+    "jest": "^27.0.6",
+    "jest-css-modules": "^2.1.0",
     "typescript": "^4.3.5"
+  },
+  "jest": {
+    "testPathIgnorePatterns": [
+      "<rootDir>/.next/",
+      "<rootDir>/node_modules/"
+    ],
+    "moduleNameMapper": {
+      "\\.(css)$": "<rootDir>/node_modules/jest-css-modules"
+    }
   },
   "prettier": {
     "singleQuote": true,
